force-app/main/default/objects/FOPS_Time_Entry__c/FOPS_Time_Entry__c.object-meta.xml
<CustomObject>
    <description>A single day's logged work. Highest-volume object - archive beyond 24 months.</description>
    <label>Time Entry</label>
    <nameField>
        <displayFormat>TE-{000000}</displayFormat>
        <label>Entry Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>