force-app/main/default/objects/FOPS_Time_Entry__c/fields/FOPS_Bill_Rate_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Bill_Rate_Snapshot__c</fullName>
    <description>CONFIDENTIAL - hidden from FOPS_Consultant. Bill rate captured at save so billed history stays stable when rates change.</description>
    <inlineHelpText>Bill rate captured when this entry was saved. Never expose to sub-contractors.</inlineHelpText>
    <label>Bill Rate (Snapshot)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>