force-app/main/default/objects/FOPS_Time_Entry__c/fields/FOPS_Billable_Amount__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Billable_Amount__c</fullName>
    <description>CONFIDENTIAL - hidden from FOPS_Consultant. Stored = Hours x Bill Rate Snapshot x Multiplier when billable, else 0.</description>
    <inlineHelpText>Billable value of this entry, captured at save. Never expose to sub-contractors.</inlineHelpText>
    <label>Billable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>