force-app/main/default/objects/FOPS_Time_Entry__c/fields/FOPS_Case__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Time Entries</relationshipLabel>
    <relationshipName>FOPS_Time_Entries</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>