force-app/main/default/objects/FOPS_Time_Entry__c/fields/FOPS_Cost_Rate_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Cost_Rate_Snapshot__c</fullName>
    <description>CONFIDENTIAL - hidden from FOPS_Consultant. Cost rate captured at save for stable margin reporting.</description>
    <inlineHelpText>Cost rate captured when this entry was saved. Never expose to sub-contractors.</inlineHelpText>
    <label>Cost Rate (Snapshot)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>