force-app/main/default/objects/FOPS_Time_Entry__c/fields/FOPS_Description__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Description__c</fullName>
    <inlineHelpText>Appears on the client invoice - keep it client-safe.</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>