force-app/main/default/objects/FOPS_Time_Entry__c/fields/FOPS_Entry_Source__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Entry_Source__c</fullName>
    <inlineHelpText>How the entry was logged.</inlineHelpText>
    <label>Entry Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Manual</fullName><default>true</default><label>Manual</label></value>
            <value><fullName>Timer</fullName><default>false</default><label>Timer</label></value>
            <value><fullName>Range</fullName><default>false</default><label>Range</label></value>
            <value><fullName>Grid</fullName><default>false</default><label>Grid</label></value>
            <value><fullName>Preset</fullName><default>false</default><label>Preset</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>