force-app/main/default/objects/FOPS_Time_Entry__c/fields/FOPS_Hours__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Hours__c</fullName>
    <label>Hours</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
    <required>true</required>
</CustomField>