force-app/main/default/objects/FOPS_Time_Entry__c/fields/FOPS_Internal_Note__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Internal_Note__c</fullName>
    <inlineHelpText>Never leaves the org.</inlineHelpText>
    <label>Internal Note</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>