force-app/main/default/objects/FOPS_Time_Entry__c/fields/FOPS_Is_Billable__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Is_Billable__c</fullName>
    <label>Billable</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>