force-app/main/default/objects/FOPS_Time_Entry__c/fields/FOPS_Overtime__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Overtime__c</fullName>
    <label>Overtime</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>