force-app/main/default/objects/FOPS_Time_Entry__c/fields/FOPS_Rate_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Rate_Multiplier__c</fullName>
    <inlineHelpText>1.0 standard, 1.5 overtime, 2.0 weekend or holiday.</inlineHelpText>
    <label>Rate Multiplier</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>