force-app/main/default/objects/FOPS_Time_Entry__c/fields/FOPS_Reference__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Reference__c</fullName>
    <label>Ticket Reference</label>
    <length>80</length>
    <type>Text</type>
</CustomField>