force-app/main/default/objects/FOPS_Time_Entry__c/fields/FOPS_Rounded__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Rounded__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Set when rounding changed the raw captured duration.</inlineHelpText>
    <label>Rounded</label>
    <type>Checkbox</type>
</CustomField>