force-app/main/default/objects/FOPS_Time_Entry__c/fields/FOPS_Time_Entry_End__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Time_Entry_End__c</fullName>
    <inlineHelpText>When the work block ended. Hours derive from End minus Start minus paused time.</inlineHelpText>
    <label>End</label>
    <type>DateTime</type>
</CustomField>