force-app/main/default/objects/FOPS_Time_Entry__c/fields/FOPS_Time_Entry_Start__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Time_Entry_Start__c</fullName>
    <inlineHelpText>When the work block started (timer/range modes). Used to derive hours and detect overlaps.</inlineHelpText>
    <label>Start</label>
    <type>DateTime</type>
</CustomField>