force-app/main/default/objects/FOPS_Time_Entry__c/fields/FOPS_Timesheet__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Timesheet__c</fullName>
    <label>Timesheet</label>
    <referenceTo>FOPS_Timesheet__c</referenceTo>
    <relationshipLabel>Time Entries</relationshipLabel>
    <relationshipName>FOPS_Time_Entries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>