force-app/main/default/objects/FOPS_Time_Entry__c/fields/FOPS_Work_Date__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Work_Date__c</fullName>
    <inlineHelpText>Indexed via External ID - primary report filter.</inlineHelpText>
    <label>Work Date</label>
    <type>Date</type>
    <required>true</required>
</CustomField>